# CCIA

./: README.md
Exploración y Pre-procesamiento de datos/: AMZN.csv  README.MD  titanic_transformer.joblib
HPC03/: README.md  californiaHousingHPC.csv  kaggle.json  usuarios.csv
HPC03/HPC3_Parcial_I/: CMakeLists.txt  README.md  main.cpp
HPC03/HPC3_Parcial_I/Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  qtcsettings.cmake
HPC03/HPC3_Parcial_I/OPERATIONS/: matrixoperations.cpp  matrixoperations.h
HPC03/Parcial_II/: Parcial_II_Linear_Regression_Comprobation.ipynb  README.md
HPC03/Parcial_II/LRModeloVF/: CMakeLists.txt  main.cpp  regresionlineal.h
HPC03/Parcial_II/LRModeloVF/Debug/: build.ninja  cmake_install.cmake
HPC03/Parcial_II/LRModeloVF/EXTRACT/: extracciondata.cpp  extracciondata.h
HPC03/Parcial_III/: README.md  [HPC_03]Parcial_Final_Comprobacion.ipynb
HPC03/Parcial_III/LRModeloVF/: main.cpp  regresionlineal.cpp
HPC03/Parcial_III/LRModeloVF/Debug/: prediccion_test.txt  vectorCosto_train.txt  vectorTheta_test.txt
HPC03/Parcial_III/ModeloC++/DATASETS/: californiaHousingHPC_withheader.csv
HPC03/Parcial_III/ModeloC++/Debug/: CMakeCache.txt.prev  prediccion_train.txt  vectorCosto_test.txt  (+1 more)
HPC03/Parcial_III/ModeloPython/: Parcial_Final_Comprobacion.ipynb  [HPC_03]Parcial_Final_Comprobacion.ipynb
Hackaton2022-01/: abuso2021.csv
Intro_ML_Computacion_Avanzada/: README.md
Intro_ML_Computacion_Avanzada/RegresionLineal/: extoeigen.cpp  modellinealregression.cpp  modellinealregression.h
RegresionLineal/: extoeigen.h  main.cpp
